# AD

./: .clang-format  .clangd  .gitignore  README.md  acados_ocp.json  commands.adoc  compile.sh  mobile_robot_25_acados_ocp.json  requirements.txt  useful_commands.adoc
src/control/: CMakeLists.txt  package.xml
src/control/config/: tunable_params.yaml
src/control/include/: MPC copy.hpp  MPC.hpp  PathManager.hpp  RoadObject.hpp  constants.h  utility.hpp
src/control/include/htn/: Action.hpp  HTN.hpp  Primitives.hpp  ValueTypes.hpp  World.hpp
src/control/include/htn/actions/: ForceStop.hpp  HandleObstacle.hpp  Move.hpp  MoveForward.hpp  ObstacleStop.hpp  Park.hpp  Parking.hpp  PedestrianStop.hpp  StopSignStop.hpp  TrafficLightStop.hpp  TrafficOvertake.hpp  TrafficStop.hpp
src/control/include/object-detection/: ObjectDetection.hpp
src/control/launch/: controller.launch  controller2.launch  controller_debug.launch
src/control/scripts/: acados_ocp.json  check_imu.py  mpc.py  mpc_acados2.py  utility.py
src/control/scripts/c_generated_code/: Makefile  acados_sim_solver_kinematic_bicycle.c  acados_sim_solver_kinematic_bicycle.h  acados_solver_kinematic_bicycle.c  main_kinematic_bicycle.c  main_sim_kinematic_bicycle.c
src/control/scripts/c_generated_code/kinematic_bicycle_cost/: kinematic_bicycle_cost.h  kinematic_bicycle_cost_y_e_hess.c  kinematic_bicycle_cost_y_fun.c
src/control/scripts/c_generated_code/kinematic_bicycle_model/: kinematic_bicycle_expl_vde_forw.c
src/control/scripts/config/: mpc_config18.yaml
src/control/src/: Controller.cpp  Controller2.cpp  RoadObject.cpp  Utility.cpp  test.txt  usbreset  usbreset.c
src/control/src/c_generated_code/: Makefile  acados_solver_mobile_robot.c  acados_solver_mobile_robot.h
src/control/src/c_generated_code_18/: Makefile  acados_sim_solver_mobile_robot_18.c  acados_solver_mobile_robot_18.c  acados_solver_mobile_robot_18.h  main_mobile_robot_18.c
src/control/src/c_generated_code_18/mobile_robot_18_model/: mobile_robot_18_expl_ode_fun.c  mobile_robot_18_expl_vde_adj.c  mobile_robot_18_expl_vde_forw.c
src/control/src/c_generated_code_25/: acados_solver_mobile_robot_25.c
src/control/src/c_generated_code_25/mobile_robot_25_cost/: mobile_robot_25_cost_y_0_fun_jac_ut_xt.c  mobile_robot_25_cost_y_0_hess.c  mobile_robot_25_cost_y_e_fun_jac_ut_xt.c
src/control/src/c_generated_code_25/mobile_robot_25_model/: mobile_robot_25_expl_ode_fun.c  mobile_robot_25_expl_vde_adj.c  mobile_robot_25_expl_vde_forw.c
src/control/src/c_generated_code_25_beta/: Makefile  acados_sim_solver_mobile_robot_25_beta.c  acados_sim_solver_mobile_robot_25_beta.h  acados_solver.pxd  acados_solver_mobile_robot_25_beta.c  acados_solver_mobile_robot_25_beta.h  main_mobile_robot_25_beta.c  main_sim_mobile_robot_25_beta.c
src/control/src/c_generated_code_25_beta/mobile_robot_25_beta_cost/: mobile_robot_25_beta_cost.h  mobile_robot_25_beta_cost_y_0_fun.c  mobile_robot_25_beta_cost_y_0_fun_jac_ut_xt.c  mobile_robot_25_beta_cost_y_0_hess.c  mobile_robot_25_beta_cost_y_e_fun.c  mobile_robot_25_beta_cost_y_e_fun_jac_ut_xt.c  mobile_robot_25_beta_cost_y_e_hess.c  mobile_robot_25_beta_cost_y_fun.c  mobile_robot_25_beta_cost_y_fun_jac_ut_xt.c  mobile_robot_25_beta_cost_y_hess.c
src/control/src/c_generated_code_25_beta/mobile_robot_25_beta_model/: mobile_robot_25_beta_expl_ode_fun.c  mobile_robot_25_beta_expl_vde_adj.c  mobile_robot_25_beta_expl_vde_forw.c  mobile_robot_25_beta_model.h
src/control/src/c_generated_code_25_simple/: Makefile  acados_sim_solver_mobile_robot_25.c  acados_solver_mobile_robot_25.c
src/control/src/c_generated_code_25_simple/mobile_robot_25_cost/: mobile_robot_25_cost_y_0_fun.c  mobile_robot_25_cost_y_e_hess.c
src/control/src/c_generated_code_25beta/: acados_sim_solver_mobile_robot_25.h  acados_solver_mobile_robot_25.h  main_mobile_robot_25.c
src/control/src/c_generated_code_25beta/mobile_robot_25_cost/: mobile_robot_25_cost.h  mobile_robot_25_cost_y_e_fun.c  mobile_robot_25_cost_y_fun.c
src/control/src/c_generated_code_25beta/mobile_robot_25_model/: mobile_robot_25_expl_ode_fun.c  mobile_robot_25_expl_vde_adj.c  (+1 more)
src/control/src/c_generated_code_25o/: acados_solver_mobile_robot_25.c  acados_solver_mobile_robot_25.h
src/control/src/c_generated_code_32/: Makefile  acados_sim_solver_mobile_robot_32.c  acados_sim_solver_mobile_robot_32.h  acados_solver.pxd  acados_solver_mobile_robot_32.c  acados_solver_mobile_robot_32.h  main_mobile_robot_32.c  main_sim_mobile_robot_32.c
src/control/src/c_generated_code_32_beta/: Makefile  acados_sim_solver_mobile_robot_32_beta.c  acados_sim_solver_mobile_robot_32_beta.h  acados_solver.pxd  acados_solver_mobile_robot_32_beta.c  acados_solver_mobile_robot_32_beta.h  main_mobile_robot_32_beta.c  main_sim_mobile_robot_32_beta.c
src/control/src/c_generated_code_50/: Makefile  acados_solver_mobile_robot_50.c  acados_solver_mobile_robot_50.h  main_mobile_robot_50.c
src/control/src/htn/: Action.cpp  HTN.cpp  World.cpp
src/control/src/object-detection/: ObjectDetection.cpp
src/perception/: CMakeLists.txt  package.xml
src/perception/cmake/: perception-extras.cmake.in
src/perception/config/: sign_params.yaml
src/perception/include/: LaneDetector.hpp  LightClassifier.hpp  SignFastest.hpp  SignFastest_trt.hpp  yolov8.h
src/perception/include/sort/: Hungarian.h  KalmanTracker.cpp  KalmanTracker.h
src/perception/launch/: cameraNode.launch  cameraNode_debug.launch  madgwick.launch  testNode.launch
src/perception/scripts/: a.cpp  analyze_wpts.py  analyze_yaw.py  connection.py  extract_map_info.py  generate_sign_launch.py  gui.py  gui2.py  map_visualizer_cv2.py  server.py  state_refs.txt  state_refs1.txt  state_refs1126.txt  state_refs4996.txt
src/perception/scripts/assets/: coordinates_with_context.csv
src/perception/scripts/lib/: color_ident.py
src/perception/src/: a.cpp  cameraNode.cpp  cameraNodeOld.cpp  rs.cpp  signFastest.cpp  testNode.cpp  yolov8.cpp
src/utils/: CMakeLists.txt
src/utils/include/utils/: constants.h  helper.h
src/utils/msg/: Lane2.msg
(+1310 files in other folders)
